2006-01-27 Will Wagner <willw@carallon.com>

        * src/quicc_smc_serial.h: Removed unused structure
        * src/quicc_smc_serial.c(quicc_smc_serial_config_port): Corrected CLEN in SMCMR
        * src/quicc_smc_serial.c(quicc_smc_serial_DSR & quicc_scc_serial_DSR): Better handling of frame and parity errors

2004-05-10  Robert Chenault <robertchenault@yahoo.com>

	* src/quicc_smc_serial.h: Added two casts of (int) on
	calculations involving CYGHWR_HAL_POWERPC_BOARD_SPEED.

2004-01-24  Philip Soeberg <ecos@soeberg.net>

	* src/quicc_smc_serial.c(quicc_sxx_serial_init): SCC3 support 
	for MPC8XX_823.
	
2003-10-13  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc_smc_serial.c: Add some I/O barriers to make sure that
	operations happen in the correct order.  Fixes BUG #90391

2003-10-08  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc_smc_serial.c: Fix compile error for Adder-II (852T)

2003-09-08  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc_smc_serial.h: Fix baud rate clock setup - was off by 1.
	Reported by Tord Andersson <Tord.Andersson@combitechsystems.com>

2003-03-31  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc_smc_serial.c (quicc_sxx_serial_init): Handle SCC3 on
	various processors (signal routing differs).

2003-03-28  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc_smc_serial.c: Change how buffers are allocated & aligned
	to a cache line - previous attempt wasted a huge amount of space.

2003-03-23  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc_smc_serial.h: Move common definitions to common
	include file (in HAL).

	* src/quicc_smc_serial.c: 
	* cdl/ser_quicc_smc.cdl: Remove options for baud rate generator
	assignment - use more generic [automatic] support.

2003-03-17  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc_smc_serial.h: 
	* src/quicc_smc_serial.c: 
	* cdl/ser_quicc_smc.cdl: Add support for SCC1/SCC2/SCC3.  Inspired
	by Paul Randall <prandall@delta-info.com>

2003-03-05  Gary Thomas  <gary@mlbassoc.com>
